--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "expo": "^52.0.7",
     "expo-av": "~15.0.1",
     "expo-constants": "~17.0.3",
